<resources>
    <string name="Cancel">Cancel</string>
    <string name="_1_hr">1 hr</string>
    <string name="_1_year">1 Year</string>
    <string name="_1d">1D</string>
    <string name="_1on1">1on1</string>
    <string name="_1w">1W</string>
    <string name="_30_m">30 m</string>
    <string name="_3_months">3 Months</string>
    <string name="_5_m">5 m</string>
    <string name="_6_months">6 Months</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="abort_payment_message">Are you sure want to abort \nthis transaction?</string>
    <string name="accept_group_invite_to">Accept group invite to \n %1$s? </string>
    <string name="accept_message_invite_from">Accept message invite from \n %1$s? </string>
    <string name="account_suspend_message">Your account has been \nSUSPENDED \ndue to policy violation </string>
    <string name="action_required">Action Required!</string>
    <string name="activation_date">Activation Date:</string>
    <string name="add_a_group_name">Add a group name</string>
    <string name="add_balance">Add Balance</string>
    <string name="add_friends">Add Friends</string>
    <string name="add_options">Add Options</string>
    <string name="add_to_text">Add to</string>
    <string name="additional_information">Additional Information</string>
    <string name="all_players_rank">All Players Rank</string>
    <string name="all_transactions">All Transactions</string>
    <string name="allow_contacts_access_description">See which of your friends are already busy making cash on StockGro</string>
    <string name="allow_contacts_access_title">Find your contacts on StockGro</string>
    <string name="allow_permission">Kindly allow permissions</string>
    <string name="allowed_changes_in_portfolio_message">You can make upto 5 changes in the portfolio \nduring each trading day.</string>
    <string name="already_added_to_the_group">Already added to the group</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="already_updated_app">Your App is up to date</string>
    <string name="amount">Amount</string>
    <string name="amount_greater_than_avaialable_balance">Insufficient Fund: Cannot withdraw \nmore than your cash amount.</string>
    <string name="amount_min_withdrawal_text">*Min withdrawal: ₹100</string>
    <string name="amount_too_high">Max ₹10,000 allowed</string>
    <string name="amount_too_low">Amount too low</string>
    <string name="analysis">Analysis</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_maintenance_message">App is under maintenance, we will be back shortly</string>
    <string name="app_name">StockGro</string>
    <string name="app_update">APPUPDATE</string>
    <string name="app_update_download_error_meessage">Error downloading the updates</string>
    <string name="app_update_downloaded_install_message">New app updates are downloaded, Tap to install</string>
    <string name="app_update_downloading_message">Downloading new updates</string>
    <string name="app_update_notification_channel_description">Allows the app to update itself in the background</string>
    <string name="app_update_notification_channel_name">App Update</string>
    <string name="app_update_text">App update</string>
    <string name="app_update_two">APP_UPDATE</string>
    <string name="app_upto_date">You are using latest version of the App.</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="apply">APPLY</string>
    <string name="apply_filters">Apply Filters</string>
    <string name="arena">PrepZone</string>
    <string name="arena_league_with_league_id">arena-league-%s</string>
    <string name="arena_tutorial_slide_five_message">Build winning portfolio, win competitions and get on top of the Leaderboard.</string>
    <string name="arena_tutorial_slide_five_title">Get on top of the Leaderboard</string>
    <string name="arena_tutorial_slide_four_message">Discuss winning strategy with your friends - build your group of trusted advisors.</string>
    <string name="arena_tutorial_slide_four_title">Invite your friends to join the competition</string>
    <string name="arena_tutorial_slide_one_message">Select a free or paid PrepZone in the upcoming section in the PrepZone.</string>
    <string name="arena_tutorial_slide_one_title">Join an exciting PrepZone to participate</string>
    <string name="arena_tutorial_slide_three_message">Pick stocks on basis of their performance and market cues and add to the portfolio.</string>
    <string name="arena_tutorial_slide_three_title">Add trending stocks to the portfolio</string>
    <string name="arena_tutorial_slide_two_message">Connect an available portfolio (Alpha or Beta) with the PrepZone - each portfolio has Rs.10 lac virtual cash.</string>
    <string name="arena_tutorial_slide_two_title">Build your Dream Portfolio</string>
    <string name="ask">Seller\'s Ask Price</string>
    <string name="ask_label">Ask Price means the lowest price a seller is willing to accept for this stock at the moment. If a buyer puts a market order, it will be bought at the lowest Ask price.</string>
    <string name="ask_price">Ask price:</string>
    <string name="asset_aar_version">1.0.7</string>
    <string name="authentication_required">Session expired</string>
    <string name="auto_renew_on">(auto-renewing on %s)</string>
    <string name="autopay">AutoPay</string>
    <string name="available_withdrawable_cash_balance">Available Cash Amount for withdrawal: Rs. %1$s</string>
    <string name="average">Average</string>
    <string name="avg_buy_price">Avg. Buy Price</string>
    <string name="avg_price">Avg. Price</string>
    <string name="avg_sell_price">Avg. Sell Price</string>
    <string name="avg_short_price">Avg. Short Price</string>
    <string name="avg_sq_off_price">Avg. Sq. Off Price</string>
    <string name="back">Back</string>
    <string name="back_to_account">Back to Wallet</string>
    <string name="back_to_home">Back To Home</string>
    <string name="balance_home">Balance</string>
    <string name="be_financially_free_with_stockgro">Be financially free with StockGro</string>
    <string name="beckn_version">1.0rc1</string>
    <string name="beta_assets">false</string>
    <string name="bid">Buyer\'s Bid Price</string>
    <string name="bid_ask">Bid Ask</string>
    <string name="bid_label">Bid Price means the highest price a buyer is willing to pay for this stock at the moment. If a seller puts a market order, it will be sold at the highest bid price.</string>
    <string name="bid_price">Bid price:</string>
    <string name="bio_empty_validation_message">Bio cannot be empty</string>
    <string name="bio_length_validation_message">Bio must be less than 150 characters</string>
    <string name="block">Block</string>
    <string name="block_confirm_title_text">Block %1$s?</string>
    <string name="block_confirmation_text_body">Are you sure you want to block this user?\n When blocked, user won\'t be able check your profile or send messages.</string>
    <string name="block_disclaimer">StockGro does not reveal your identity when you block someone or someone\'s content.</string>
    <string name="block_reassurance_text">StockGro does not reveal your identity when you block someone or someone\'s content.</string>
    <string name="block_this_group">Block %1$s?</string>
    <string name="block_unblock_confirmation">You have %1$s this profile</string>
    <string name="blocked_user_sub_section_message">Sections in the T&amp;C \nfor User behaviour\nthat would result in \nAccount Suspension</string>
    <string name="bonus">Bonus</string>
    <string name="bonus_pool">Bonus Pool</string>
    <string name="book_profit">Book Profit Δ</string>
    <string name="book_profit_amount">Book Profit (Price)</string>
    <string name="bought_">Bought</string>
    <string name="categories">Categories</string>
    <string name="credit">Credit</string>
    <string name="date">Date</string>
    <string name="debit">Debit</string>
    <string name="filter">Filter</string>
    <string name="filter_transactions">Filter Transactions</string>
    <string name="home">Home</string>
    <string name="last_month">Last Month</string>
    <string name="last_one_month">Last 1 month</string>
    <string name="last_one_week">Last 1 week</string>
    <string name="last_six_month">Last 6 months</string>
    <string name="last_week">Last Week</string>
    <string name="league">PrepZone</string>
    <string name="menu">menu</string>
    <string name="no_chat_subtitle_text">Follow members to add them to your chats</string>
    <string name="payment">Payment</string>
    <string name="portfolio">Portfolios</string>
    <string name="referral">Referral</string>
    <string name="reset">RESET</string>
    <string name="select_one_options">(Select one option)</string>
    <string name="sold_">Sold</string>
    <string name="status">Status</string>
    <string name="stockgro_plus">StockGro Plus</string>
    <string name="text_apply">Apply</string>
    <string name="text_block_user">Block User</string>
    <string name="text_blocked_users">Blocked Users</string>
    <string name="text_clear">Clear</string>
    <string name="text_failed">Failed</string>
    <string name="text_market">Market</string>
    <string name="text_oops">No Chats</string>
    <string name="text_pending">Pending</string>
    <string name="text_report_user">Report User</string>
    <string name="text_saved_post">Saved Posts</string>
    <string name="text_social_lowercase">Social</string>
    <string name="text_success">Success</string>
    <string name="text_transactions">Transactions</string>
    <string name="this_month">This month</string>
    <string name="this_week">This week</string>
    <string name="time">Time</string>
    <string name="title_notification">Notification</string>
    <string name="title_search">Search</string>
    <string name="today">Today</string>
    <string name="trade_type">Trade Type</string>
    <string name="withdrawal">Withdrawal</string>
    <string name="yesterday">Yesterday</string>
</resources>