<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:tag="layout/fragment_bottom_sheet_filter_0"
    android:background="@color/white"
    android:padding="24dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.google.android.material.textview.MaterialTextView
        android:textSize="18dp"
        android:textColor="@color/black_1A1A1A"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter"
        android:fontFamily="@font/inter_600"/>
    <com.google.android.material.chip.ChipGroup
        android:id="@+id/filterChipGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:checkedChip="@+id/dateChip"
        app:singleSelection="true">
        <com.google.android.material.chip.Chip
            android:id="@+id/dateChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            app:closeIcon="@drawable/ic_filter_desc"
            style="@style/ChipStyleNew"/>
        <com.google.android.material.chip.Chip
            android:id="@+id/amountChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amount"
            style="@style/ChipStyleNew"/>
    </com.google.android.material.chip.ChipGroup>
    <com.google.android.material.textview.MaterialTextView
        android:textSize="18dp"
        android:textColor="@color/black_1A1A1A"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trade_type"
        android:fontFamily="@font/inter_600"/>
    <com.google.android.material.chip.ChipGroup
        android:id="@+id/tradeTypeChipGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:checkedChip="@+id/boughtChip"
        app:chipSpacingHorizontal="16dp"
        app:chipSpacingVertical="8dp"
        app:singleSelection="true">
        <com.google.android.material.chip.Chip
            android:id="@+id/boughtChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bought_"
            style="@style/ChipStyleNew"/>
        <com.google.android.material.chip.Chip
            android:id="@+id/soldChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sold_"
            style="@style/ChipStyleNew"/>
    </com.google.android.material.chip.ChipGroup>
    <com.google.android.material.textview.MaterialTextView
        android:textSize="18dp"
        android:textColor="@color/black_1A1A1A"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:fontFamily="@font/inter_600"/>
    <com.google.android.material.chip.ChipGroup
        android:id="@+id/timeChipGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:checkedChip="@+id/todayChip"
        app:singleSelection="true">
        <com.google.android.material.chip.Chip
            android:id="@+id/todayChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/today"
            style="@style/ChipStyleNew"/>
        <com.google.android.material.chip.Chip
            android:id="@+id/yesterdayChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yesterday"
            style="@style/ChipStyleNew"/>
        <com.google.android.material.chip.Chip
            android:id="@+id/lastWeekChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_week"
            style="@style/ChipStyleNew"/>
        <com.google.android.material.chip.Chip
            android:id="@+id/lastMonthChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_month"
            style="@style/ChipStyleNew"/>
        <com.google.android.material.chip.Chip
            android:id="@+id/Month3Chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_3_months"
            style="@style/ChipStyleNew"/>
        <com.google.android.material.chip.Chip
            android:id="@+id/Month6Chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_6_months"
            style="@style/ChipStyleNew"/>
        <com.google.android.material.chip.Chip
            android:id="@+id/yearChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1_year"
            style="@style/ChipStyleNew"/>
    </com.google.android.material.chip.ChipGroup>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/history_filter_reset_button"
            android:layout_width="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/reset"
            android:layout_weight="1"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            style="@style/secondaryButton"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/history_filter_apply_button"
            android:layout_width="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/apply"
            android:layout_weight="1"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="0dp"
            style="@style/primaryButton"/>
    </LinearLayout>
</LinearLayout>
