<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_item_search"
        android:title="@string/title_search"
        app:actionLayout="@layout/layout_menu_item_search"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_item_notifications"
        android:title="@string/title_notification"
        app:actionLayout="@layout/layout_menu_item_notification"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_option_saved_posts"
        android:title="@string/text_saved_post"
        app:icon="@drawable/ic_overflow_menu_vertical"
        app:iconTint="@color/white"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_option_blocked_users"
        android:title="@string/text_blocked_users"
        app:icon="@drawable/ic_overflow_menu_vertical"
        app:iconTint="@color/white"
        app:showAsAction="never"/>
</menu>
