<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:tag="layout/bottom_sheet_advance_transaction_filter_0"
    android:background="@drawable/bottom_sheet_rounded_corner"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">
    <TextView
        android:textSize="18dp"
        android:textColor="#1a1a1a"
        android:id="@+id/label_filter_transactions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="8dp"
        android:text="@string/filter_transactions"
        android:fontFamily="@font/inter_600"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:textSize="14dp"
        android:textColor="#1a1a1a"
        android:id="@+id/label_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="8dp"
        android:text="@string/date"
        android:fontFamily="@font/inter_600"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_filter_transactions"/>
    <TextView
        android:textSize="12dp"
        android:textColor="@color/black_1A1A1A_40"
        android:id="@+id/label_date_remark"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/select_one_options"
        android:fontFamily="@font/inter_400"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/label_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/label_date"
        app:layout_constraintTop_toTopOf="@+id/label_date"/>
    <com.google.android.material.chip.ChipGroup
        android:id="@+id/date_filters"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginVertical="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_date"
        app:singleSelection="true">
        <com.google.android.material.chip.Chip
            android:id="@+id/this_week"
            android:tag="THIS_WEEK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/this_week"
            style="@style/ChipStyleNew"/>
        <com.google.android.material.chip.Chip
            android:id="@+id/this_month"
            android:tag="THIS_MONTH"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/this_month"
            style="@style/ChipStyleNew"/>
        <com.google.android.material.chip.Chip
            android:id="@+id/last_one_week"
            android:tag="LAST_WEEK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_one_week"
            style="@style/ChipStyleNew"/>
        <com.google.android.material.chip.Chip
            android:id="@+id/last_one_month"
            android:tag="LAST_MONTH"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_one_month"
            style="@style/ChipStyleNew"/>
        <com.google.android.material.chip.Chip
            android:id="@+id/last_six_month"
            android:tag="LAST_SIX_MONTH"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_six_month"
            style="@style/ChipStyleNew"/>
    </com.google.android.material.chip.ChipGroup>
    <TextView
        android:textSize="14dp"
        android:textColor="#1a1a1a"
        android:id="@+id/label_transactions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/text_transactions"
        android:fontFamily="@font/inter_600"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_filters"/>
    <com.google.android.material.chip.ChipGroup
        android:id="@+id/transaction_filters"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginVertical="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_transactions"
        app:singleSelection="false">
        <com.google.android.material.chip.Chip
            android:id="@+id/cash"
            android:tag="DR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/debit"
            style="@style/ChipStyleNew"/>
        <com.google.android.material.chip.Chip
            android:id="@+id/bonus"
            android:tag="CR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/credit"
            style="@style/ChipStyleNew"/>
    </com.google.android.material.chip.ChipGroup>
    <TextView
        android:textSize="14dp"
        android:textColor="#1a1a1a"
        android:id="@+id/label_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/status"
        android:fontFamily="@font/inter_600"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transaction_filters"/>
    <com.google.android.material.chip.ChipGroup
        android:id="@+id/status_filters"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginVertical="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_status"
        app:singleSelection="false">
        <com.google.android.material.chip.Chip
            android:id="@+id/success"
            android:tag="SUCCESS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_success"
            style="@style/ChipStyleNew"/>
        <com.google.android.material.chip.Chip
            android:id="@+id/pending"
            android:tag="PENDING"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_pending"
            style="@style/ChipStyleNew"/>
        <com.google.android.material.chip.Chip
            android:id="@+id/failed"
            android:tag="FAILED"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_failed"
            style="@style/ChipStyleNew"/>
    </com.google.android.material.chip.ChipGroup>
    <TextView
        android:textSize="14dp"
        android:textColor="#1a1a1a"
        android:id="@+id/label_categories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/categories"
        android:fontFamily="@font/inter_600"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/status_filters"/>
    <com.google.android.material.chip.ChipGroup
        android:id="@+id/categories_filters"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginVertical="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_categories"
        app:singleSelection="false">
        <com.google.android.material.chip.Chip
            android:id="@+id/leagues"
            android:tag="LEAGUE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/league"
            style="@style/ChipStyleNew"/>
        <com.google.android.material.chip.Chip
            android:id="@+id/referral"
            android:tag="REFERRAL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/referral"
            style="@style/ChipStyleNew"/>
        <com.google.android.material.chip.Chip
            android:id="@+id/payment"
            android:tag="PAYMENT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payment"
            style="@style/ChipStyleNew"/>
        <com.google.android.material.chip.Chip
            android:id="@+id/subscription"
            android:tag="SUBSCRIPTION"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stockgro_plus"
            style="@style/ChipStyleNew"/>
        <com.google.android.material.chip.Chip
            android:id="@+id/withdrawal"
            android:tag="WITHDRAW"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/withdrawal"
            style="@style/ChipStyleNew"/>
    </com.google.android.material.chip.ChipGroup>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/clear_filter"
        android:layout_width="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/text_clear"
        android:layout_weight="1"
        android:layout_marginEnd="4dp"
        android:layout_marginVertical="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/apply_filter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/categories_filters"
        style="@style/secondaryButton"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/apply_filter"
        android:layout_width="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/text_apply"
        android:layout_weight="1"
        android:layout_marginStart="4dp"
        android:layout_marginVertical="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/clear_filter"
        app:layout_constraintTop_toBottomOf="@+id/categories_filters"
        style="@style/primaryButton"/>
</androidx.constraintlayout.widget.ConstraintLayout>
