<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:orientation="vertical"
    android:id="@+id/no_content_container"
    android:tag="layout/view_no_channels_0"
    android:paddingBottom="16dp"
    android:visibility="visible"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_no_stocks"/>
    <TextView
        android:textSize="18dp"
        android:textColor="@color/black_1A1A1A"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/text_oops"
        android:fontFamily="@font/inter_600"
        android:textAlignment="center"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"/>
    <TextView
        android:textSize="12dp"
        android:textColor="@color/black_1A1A1A_40"
        android:gravity="center"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/no_chat_subtitle_text"
        android:fontFamily="@font/inter_500"/>
</LinearLayout>
